# Axon-Search

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
src/: config.py
src/api/: schemas.py  server.py
src/api/routes/: index.py  search.py
src/crawler/: __init__.py  async_crawler.py  link_graph.py  robots.py
src/indexer/: bm25.py  embedder.py  pipeline.py  vector_store.py
src/search/: hybrid_retriever.py  neural_filter.py  query_processor.py  reranker.py
src/utils/: dedup.py  quality_scorer.py  text_cleaner.py
tests/: conftest.py  test_async_crawler.py  test_bm25.py  test_dedup.py  test_hybrid_retriever.py  test_link_graph.py  test_query_processor.py
