[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "axon-search"
version = "0.1.0"
description = "Semantic search engine with hybrid retrieval"
requires-python = ">=3.10"
dependencies = [
    # Crawling
    "aiohttp>=3.9",
    "aiohttp-retry>=2.8",
    "aiofiles>=23.0",
    "playwright>=1.40",
    "urllib3>=2.0",
    # Content extraction
    "trafilatura>=1.7",
    "readability-lxml>=0.8",
    "lxml>=4.9",
    "beautifulsoup4>=4.12",
    "chardet>=5.0",
    # Embeddings + ML
    "sentence-transformers>=2.6",
    "torch>=2.1",
    "transformers>=4.38",
    "numpy>=1.26",
    "scipy>=1.12",
    # Vector index
    "faiss-cpu>=1.8",
    "hnswlib>=0.8",
    # Sparse index
    "rank-bm25>=0.2",
    "nltk>=3.8",
    # Dedup
    "datasketch>=1.6",
    "mmh3>=4.0",
    # API
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    # Storage
    "diskcache>=5.6",
    "rocksdict>=0.3",
    # Utils
    "tqdm>=4.66",
    "loguru>=0.7",
    "tenacity>=8.2",
    "xxhash>=3.4",
    "orjson>=3.9",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["ruff", "mypy", "pytest", "pytest-asyncio", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
no_strict_optional = true
